@@ -17,6 +17,7 @@ Change log next version
 * It's now possible to supply MockMvcConfigurers when calling standaloneSetup in the Spring Mock MVC module. For example:
       given().standaloneSetup(new Controller1(), springSecurity()). ..
 * Automatically adds supports for spring rest docs path parameter documentation if spring-restdocs-mockmvc is in classpath. This can be disabled using the MockMvcConfig (issue 606).
+* It's now possible to change port, base path etc from a filter (issue 600)
 
 Change log 2.6.0 (2015-10-09)
 -----------------------------
